--- a/css/styles.css
+++ b/css/styles.css
@@ -30,20 +30,9 @@ html {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    position: absolute;
-    overflow: hidden;
+    position: fixed;
     width: 100%;
-    height: 100vh;
-    z-index: -1;
-}
-
-.navbar__video {
-    position: absolute;
-    min-width: 100%;
-    height: auto;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    height: 100%;
 }
 
 .navbar-button {
