--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
     --BG-loader: hsla(244, 24%, 24%, 0.932);
     --icons: rgba(245, 152, 12, 0.911);
     --white: rgb(255, 255, 255);
-    --gray: #a6ad9ce7;
+    --paragraph-gray: #e6e5e4ea;
     --black: #000000;
     --form: #ddab2231;
     --hambur: rgba(205, 203, 211, 0.877);
@@ -24,7 +24,7 @@ html {
     scroll-behavior: smooth;
 }
 
-.navbar__video-container {
+.navbar__img-container {
     background-image: url(../Images/Bg-home.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -32,7 +32,7 @@ html {
     background-size: cover;
     position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: -1;
 }
 
@@ -88,6 +88,7 @@ html {
     transform: translateX(-100%);
     transition: transform 0.8s;
     z-index: 5;
+    backdrop-filter: blur(10px);
 }
 
 .navbar__items-show {
@@ -101,7 +102,12 @@ html {
     text-align: center;
 }
 
+.navbar__routes-a:active {
+    transform: scale(0.9);
+}
+
 .home {
+    padding-top: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -111,22 +117,19 @@ html {
 }
 
 .home-container {
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     overflow: hidden;
     border-radius: 50%;
-    width: 100%;
-    max-width: 450px;
     aspect-ratio: 1;
+    border: 6px solid rgba(204, 186, 186, 0.651);
 }
 
 .home-container__img {
-    border-radius: 50%;
-    width: 80%;
-    aspect-ratio: 1;
-    border: 6px solid rgba(204, 186, 186, 0.651);
+    width: 100%;
+    transition: transform 0.6s;
+}
+
+.home-container__img:hover {
+    transform: scale(1.1);
 }
 
 .home-body {
@@ -149,7 +152,7 @@ html {
     color: var(--black);
     animation: typing 8s steps(18) infinite, blink 1s step-end alternate;
     overflow: hidden;
-    font-size: 2.2rem;
+    font-size: 1.7rem;
 }
 
 @keyframes typing {
@@ -158,7 +161,7 @@ html {
     }
 
     50% {
-        width: 345px;
+        width: 280px;
     }
 
     100% {
@@ -219,7 +222,8 @@ html {
 }
 
 .about_me__p {
-    padding: 10px 20px;
+    margin: 10px 20px;
+    color: var(--paragraph-gray);
 }
 
 .about_me__container-buttons {
@@ -231,15 +235,15 @@ html {
     font-family: inherit;
     font-size: 16px;
     background: var(--BG-loader);
-    color: white;
+    color: var(--white);
     padding: 0.7em 1em;
     padding-left: 0.9em;
     display: flex;
     align-items: center;
     border: none;
-    border-radius: 16px;
+    border-radius: 25px;
     overflow: hidden;
-    transition: all 0.2s;
+    transition: all 0.4s;
     cursor: pointer;
 }
 
@@ -287,38 +291,37 @@ html {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    padding: 30px 20px;
+    padding: 20px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 2rem;
-    background-color: var(--BG-loader);
     width: 100%;
 }
 
 .experience__p {
-    font-weight: 700;
+    font-weight: 600;
     line-height: 25px;
     max-width: 600px;
+    color: var(--paragraph-gray);
+    font-size: 19px;
 }
 
 .experience__span,
 a {
-    color: var(--Color-Titles);
+    color: rgb(255, 255, 255);
 }
 
 .experience-bussines {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 .experience-bussines__info {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 1.5rem;
+    gap: 1rem;
     padding: 20px 10px;
     align-items: center;
     justify-content: space-between;
@@ -334,8 +337,9 @@ a {
     font-size: 1.5rem;
 }
 
-.experience-bussines__li{
-    font-weight: 700;
+.experience-bussines__li {
+    font-weight: 500;
+    color: rgb(243, 242, 242);
 }
 
 .experience-bussines__container {
@@ -378,18 +382,21 @@ a {
 .habilities__title {
     background-color: var(--BG-portfolio);
     text-align: center;
-    padding-top: 100px;
+    border: none;
+    padding-top: 20px;
 }
 
 .habilities__container {
     text-align: center;
     width: 100%;
+    color: var(--paragraph-gray);
     animation: fly-1 0.6s ease-in-out infinite alternate;
 }
 
 .svg {
     font-size: 7rem;
-    color: var(--Color-Titles);
+    color: var(--icons);
+    filter: drop-shadow(8px 8px 3px #c9be4ac0)
 }
 
 .My_Proyects {
@@ -401,20 +408,19 @@ a {
     background-attachment: fixed;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    gap: 3rem;
-    min-height: 700px;
+    gap: 1.5rem;
+    min-height: 600px;
 }
 
 .My_Proyects__proyects {
-    width: 80%;
+    width: 90%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    height: 470px;
+    height: 400px;
     overflow: hidden;
-    gap: 2rem;
+    gap: 1rem;
     overflow-y: scroll;
 }
 
@@ -443,10 +449,11 @@ a {
 
 .My_Proyects__container-card {
     width: 280px;
-    height: 400px;
+    height: 380px;
     position: relative;
     transform-style: preserve-3d;
     transition: all 600ms;
+    padding-bottom: 10px;
 }
 
 .card__front {
@@ -462,8 +469,7 @@ a {
     top: 0;
     left: 0;
     backface-visibility: hidden;
-    transform-style: preserve-3d;
-    border-radius: 20px;
+    border-radius: 25px;
     overflow: hidden;
 }
 
@@ -479,17 +485,16 @@ a {
     top: 0;
     left: 0;
     background: rgba(0, 0, 0, 0.4);
-    border-radius: 20px;
+    border-radius: 25px;
 }
 
 .body__card-back {
-    padding: 40px;
+    padding: 20px;
     text-align: center;
-    transform: translateZ(600px);
 }
 
 .body__card-back p {
-    margin-top: 30px;
+    margin-top: 15px;
     font-size: 18px;
 }
 
@@ -520,6 +525,7 @@ a {
     color: var(--hambur);
     font-size: 4rem;
     animation: fly-1 1s ease-in-out infinite alternate;
+    filter: drop-shadow(8px 8px 3px #b6b28ec0)
 }
 
 @media (min-width: 700px) {
@@ -530,12 +536,20 @@ a {
     .navbar__routes {
         font-size: 16px;
         padding: 0;
+        transition: transform 0.2s;
     }
 
     .navbar-ul__routes {
         display: flex;
+        justify-content: center;
+        align-items: center;
         gap: 1rem;
         padding: 0px 25px;
+    }
+
+    .navbar__routes:hover {
+        transform: scale(1.1);
+        transition: transform 0.2s;
     }
 
     .navbar__items {
@@ -543,17 +557,14 @@ a {
         background-color: var(--hamburhidden);
         width: 78%;
         max-width: 784px;
-        height: 60px;
+        height: 50px;
         cursor: pointer;
         transform: translateX(-50%);
         z-index: 5;
-        display: block;
-        top: 20px;
+        top: 10px;
         left: 50%;
         border-radius: 50px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        backdrop-filter: blur(10px);
     }
 
     .navbar__routes-a {
@@ -564,17 +575,24 @@ a {
     }
 
     .experience {
-        padding: 100px;
+        padding: 72px;
     }
 
     .habilities__container-father {
         height: auto;
-        padding-bottom: 90px;
+        padding-bottom: 30px;
     }
-    .about_me__container{
-        padding-top: 80px;
+
+    .habilities__title {
+        padding-top: 72px;
+    }
+
+    .about_me__container {
+        padding-top: 72px;
         padding-bottom: 80px;
     }
 
-
+    .My_Proyects {
+        padding-top: 72px;
+    }
 }
